compiler/testData/multiplatform/incompatibleProperties/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleProperties/jvm.kt:1:12: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect val pval: String
  actual: public final actual var pval: String
  reason: the property kinds are different (val vs var)
actual var pval: String = ""
           ^^^^
compiler/testData/multiplatform/incompatibleProperties/jvm.kt:2:12: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect var pvar: String
  actual: public final actual val pvar: String
  reason: the property kinds are different (val vs var)
actual val pvar: String = ""
           ^^^^
